// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`es-to-ymodules No thorw module name error, if plain ymodule: No thorw module name error, if plain ymodule 1`] = `
"
/** */
 modules.define

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

/** */
modules.define;
"
`;

exports[`es-to-ymodules Patch modules with short arrow: Patch modules with short arrow 1`] = `
"
modules.define('a', (p, a) => p(a))

      ↓ ↓ ↓ ↓ ↓ ↓

'use strict';

modules.define('a', (p, a) => {
  a = _extractDefaultValue(a);

  function _extractDefaultValue(obj) {
    return obj && obj.__esModule ? obj.default : obj;
  }

  p(a);
});
"
`;

exports[`es-to-ymodules Simple import: Simple import 1`] = `
"
import block from \\"m\\"

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _m = require(\\"m\\");

var _m2 = _interopRequireDefault(_m);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
"
`;

exports[`es-to-ymodules Skip BinaryExpression exports: Skip BinaryExpression exports 1`] = `
"
exports === 10

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

exports === 10;
"
`;

exports[`es-to-ymodules Skip UnaryExpression exports: Skip UnaryExpression exports 1`] = `
"
typeof exports

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

typeof exports;
"
`;
